# flushy

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
.svelte-kit/: ambient.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  .#CollapsedCard.svelte  CollapsedCard.svelte  DetailsComponent.svelte  Event.svelte  FileView.svelte  MyFile.ts  Sidebar.svelte  helper.ts  old.page.svelte.backup
